added missing include dir
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4700 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/source/codeblocks/AssaultCube.cbp
+++ b/ac/source/codeblocks/AssaultCube.cbp
@@ -27,6 +27,7 @@
 		<Compiler>
 			<Add directory="..\enet\include" />
 			<Add directory="..\include" />
+			<Add directory="..\src" />
 		</Compiler>
 		<ResourceCompiler>
 			<Add directory="..\vcpp" />
