fixing lib refs
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4703 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/source/codeblocks/AssaultCube.cbp
+++ b/ac/source/codeblocks/AssaultCube.cbp
@@ -40,92 +40,94 @@
 			<Add library="opengl32" />
 			<Add library="enet" />
 			<Add library="OpenAL32" />
-			<Add library="libvorbisfile" />
-			<Add library="libjpeg-static-mt" />
-			<Add library="libintl" />
+			<Add library="..\lib\libvorbisfile.lib" />
+			<Add library="..\lib\libjpeg-static-mt.lib" />
+			<Add library="..\lib\libintl.lib" />
 			<Add library="ws2_32" />
 			<Add library="winmm" />
 			<Add directory="..\lib" />
 		</Linker>
-		<Unit filename="../src/bot/ac_bot.cpp" />
-		<Unit filename="../src/bot/ac_bot.h" />
-		<Unit filename="../src/bot/ac_bot_ai.cpp" />
-		<Unit filename="../src/bot/bot.cpp" />
-		<Unit filename="../src/bot/bot.h" />
-		<Unit filename="../src/bot/bot_ai.cpp" />
-		<Unit filename="../src/bot/bot_util.cpp" />
-		<Unit filename="../src/bot/bot_util.h" />
-		<Unit filename="../src/bot/bot_waypoint.cpp" />
-		<Unit filename="../src/bot/bot_waypoint.h" />
-		<Unit filename="../src/bot/botmanager.cpp" />
-		<Unit filename="../src/audiomanager.cpp" />
-		<Unit filename="../src/client.cpp" />
-		<Unit filename="../src/clientgame.cpp" />
-		<Unit filename="../src/clients2c.cpp" />
-		<Unit filename="../src/command.cpp" />
-		<Unit filename="../src/command.h" />
-		<Unit filename="../src/console.cpp" />
-		<Unit filename="../src/console.h" />
-		<Unit filename="../src/cube.h">
+		<Unit filename="..\src\audiomanager.cpp" />
+		<Unit filename="..\src\bot\ac_bot.cpp" />
+		<Unit filename="..\src\bot\ac_bot.h" />
+		<Unit filename="..\src\bot\ac_bot_ai.cpp" />
+		<Unit filename="..\src\bot\bot.cpp" />
+		<Unit filename="..\src\bot\bot.h" />
+		<Unit filename="..\src\bot\bot_ai.cpp" />
+		<Unit filename="..\src\bot\bot_util.cpp" />
+		<Unit filename="..\src\bot\bot_util.h" />
+		<Unit filename="..\src\bot\bot_waypoint.cpp" />
+		<Unit filename="..\src\bot\bot_waypoint.h" />
+		<Unit filename="..\src\bot\botmanager.cpp" />
+		<Unit filename="..\src\client.cpp" />
+		<Unit filename="..\src\clientgame.cpp" />
+		<Unit filename="..\src\clients2c.cpp" />
+		<Unit filename="..\src\command.cpp" />
+		<Unit filename="..\src\command.h" />
+		<Unit filename="..\src\console.cpp" />
+		<Unit filename="..\src\console.h" />
+		<Unit filename="..\src\cube.h">
 			<Option compile="1" />
 			<Option weight="0" />
 		</Unit>
-		<Unit filename="../src/docs.cpp" />
-		<Unit filename="../src/editing.cpp" />
-		<Unit filename="../src/entities.cpp" />
-		<Unit filename="../src/entity.h" />
-		<Unit filename="../src/geom.h" />
-		<Unit filename="../src/hudgun.h" />
-		<Unit filename="../src/log.cpp" />
-		<Unit filename="../src/main.cpp" />
-		<Unit filename="../src/md2.h" />
-		<Unit filename="../src/md3.h" />
-		<Unit filename="../src/menus.cpp" />
-		<Unit filename="../src/model.h" />
-		<Unit filename="../src/oggstream.cpp" />
-		<Unit filename="../src/openal.cpp" />
-		<Unit filename="../src/packetqueue.cpp" />
-		<Unit filename="../src/platform.h" />
-		<Unit filename="../src/physics.cpp" />
-		<Unit filename="../src/protocol.cpp" />
-		<Unit filename="../src/protocol.h" />
-		<Unit filename="../src/protos.h" />
-		<Unit filename="../src/rendercubes.cpp" />
-		<Unit filename="../src/rendergl.cpp" />
-		<Unit filename="../src/renderhud.cpp" />
-		<Unit filename="../src/rendermodel.cpp" />
-		<Unit filename="../src/renderparticles.cpp" />
-		<Unit filename="../src/rendertext.cpp" />
-		<Unit filename="../src/rndmap.cpp" />
-		<Unit filename="../src/scoreboard.cpp" />
-		<Unit filename="../src/server.cpp" />
-		<Unit filename="../src/serveractions.h" />
-		<Unit filename="../src/serverbrowser.cpp" />
-		<Unit filename="../src/servercontroller.h" />
-		<Unit filename="../src/serverevents.h" />
-		<Unit filename="../src/serverms.cpp" />
-		<Unit filename="../src/shadow.cpp" />
-		<Unit filename="../src/sound.cpp" />
-		<Unit filename="../src/sound.h" />
-		<Unit filename="../src/soundlocation.cpp" />
-		<Unit filename="../src/soundscheduler.cpp" />
-		<Unit filename="../src/texture.cpp" />
-		<Unit filename="../src/tools.cpp" />
-		<Unit filename="../src/tools.h" />
-		<Unit filename="../src/tristrip.h" />
-		<Unit filename="../src/vertmodel.h" />
-		<Unit filename="../src/vote.h" />
-		<Unit filename="../src/water.cpp" />
-		<Unit filename="../src/weapon.cpp" />
-		<Unit filename="../src/weapon.h" />
-		<Unit filename="../src/winserviceinstaller.h" />
-		<Unit filename="../src/wizard.cpp" />
-		<Unit filename="../src/world.cpp" />
-		<Unit filename="../src/world.h" />
-		<Unit filename="../src/worldio.cpp" />
-		<Unit filename="../src/worldlight.cpp" />
-		<Unit filename="../src/worldocull.cpp" />
-		<Unit filename="../src/worldrender.cpp" />
+		<Unit filename="..\src\docs.cpp" />
+		<Unit filename="..\src\editing.cpp" />
+		<Unit filename="..\src\entities.cpp" />
+		<Unit filename="..\src\entity.h" />
+		<Unit filename="..\src\geom.h" />
+		<Unit filename="..\src\hudgun.h" />
+		<Unit filename="..\src\i18n.cpp" />
+		<Unit filename="..\src\i18n.h" />
+		<Unit filename="..\src\log.cpp" />
+		<Unit filename="..\src\main.cpp" />
+		<Unit filename="..\src\md2.h" />
+		<Unit filename="..\src\md3.h" />
+		<Unit filename="..\src\menus.cpp" />
+		<Unit filename="..\src\model.h" />
+		<Unit filename="..\src\oggstream.cpp" />
+		<Unit filename="..\src\openal.cpp" />
+		<Unit filename="..\src\packetqueue.cpp" />
+		<Unit filename="..\src\physics.cpp" />
+		<Unit filename="..\src\platform.h" />
+		<Unit filename="..\src\protocol.cpp" />
+		<Unit filename="..\src\protocol.h" />
+		<Unit filename="..\src\protos.h" />
+		<Unit filename="..\src\rendercubes.cpp" />
+		<Unit filename="..\src\rendergl.cpp" />
+		<Unit filename="..\src\renderhud.cpp" />
+		<Unit filename="..\src\rendermodel.cpp" />
+		<Unit filename="..\src\renderparticles.cpp" />
+		<Unit filename="..\src\rendertext.cpp" />
+		<Unit filename="..\src\rndmap.cpp" />
+		<Unit filename="..\src\scoreboard.cpp" />
+		<Unit filename="..\src\server.cpp" />
+		<Unit filename="..\src\serveractions.h" />
+		<Unit filename="..\src\serverbrowser.cpp" />
+		<Unit filename="..\src\servercontroller.h" />
+		<Unit filename="..\src\serverevents.h" />
+		<Unit filename="..\src\serverms.cpp" />
+		<Unit filename="..\src\shadow.cpp" />
+		<Unit filename="..\src\sound.cpp" />
+		<Unit filename="..\src\sound.h" />
+		<Unit filename="..\src\soundlocation.cpp" />
+		<Unit filename="..\src\soundscheduler.cpp" />
+		<Unit filename="..\src\texture.cpp" />
+		<Unit filename="..\src\tools.cpp" />
+		<Unit filename="..\src\tools.h" />
+		<Unit filename="..\src\tristrip.h" />
+		<Unit filename="..\src\vertmodel.h" />
+		<Unit filename="..\src\vote.h" />
+		<Unit filename="..\src\water.cpp" />
+		<Unit filename="..\src\weapon.cpp" />
+		<Unit filename="..\src\weapon.h" />
+		<Unit filename="..\src\winserviceinstaller.h" />
+		<Unit filename="..\src\wizard.cpp" />
+		<Unit filename="..\src\world.cpp" />
+		<Unit filename="..\src\world.h" />
+		<Unit filename="..\src\worldio.cpp" />
+		<Unit filename="..\src\worldlight.cpp" />
+		<Unit filename="..\src\worldocull.cpp" />
+		<Unit filename="..\src\worldrender.cpp" />
 		<Unit filename="..\vcpp\SDL_win32_main.c">
 			<Option compilerVar="CC" />
 		</Unit>
