restoring old jpeg lib
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4707 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/source/codeblocks/AssaultCube.cbp
+++ b/ac/source/codeblocks/AssaultCube.cbp
@@ -41,7 +41,7 @@
 			<Add library="enet" />
 			<Add library="OpenAL32" />
 			<Add library="..\lib\libvorbisfile.lib" />
-			<Add library="jpeg" />
+			<Add library="..\lib\libjpeg-static-mt.lib" />
 			<Add library="..\lib\libintl.lib" />
 			<Add library="ws2_32" />
 			<Add library="winmm" />
