abstract the mv command
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4728 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/source/src/Makefile
+++ b/ac/source/src/Makefile
@@ -13,6 +13,8 @@ ifeq (,$(findstring -pg,$(CXXFLAGS)))
 endif
 endif
 
+MV=mv
+
 ifneq (,$(findstring MINGW,$(PLATFORM)))
 WINDRES= windres
 CLIENT_INCLUDES= $(INCLUDES) -I../include
@@ -122,7 +124,7 @@ clean:
 
 %.h.gch: %.h
 	$(CXX) $(CXXFLAGS) -o $@.tmp $(subst .h.gch,.h,$@)
-	mv $@.tmp $@
+	$(MV) $@.tmp $@
 
 %-standalone.o: %.cpp
 	$(CXX) $(CXXFLAGS) -c -o $@ $(subst -standalone.o,.cpp,$@)
