--- a/ac/config/keymap.cfg
+++ b/ac/config/keymap.cfg
@@ -5,6 +5,9 @@ keymap -3 MOUSE2
 keymap -2 MOUSE3
 keymap -4 MOUSE4
 keymap -5 MOUSE5
+keymap -6 MOUSE6
+keymap -7 MOUSE7
+keymap -8 MOUSE8
 keymap 8 BACKSPACE
 keymap 9 TAB
 keymap 12 CLEAR
