--- a/ac/source/codeblocks/AssaultCube.cbp
+++ b/ac/source/codeblocks/AssaultCube.cbp
@@ -36,6 +36,7 @@
 			<Add option="-mwindows" />
 			<Add library="SDL" />
 			<Add library="SDL_image" />
+			<Add library="SDL_ttf" />
 			<Add library="zdll" />
 			<Add library="opengl32" />
 			<Add library="enet" />
