clean master objs
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4811 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/source/src/Makefile
+++ b/ac/source/src/Makefile
@@ -125,7 +125,7 @@ clean-enet: ../enet/Makefile
 	$(MAKE) -C ../enet/ clean
 
 clean:
-	-$(RM) $(CLIENT_PCH) $(CLIENT_OBJS) $(SERVER_OBJS) ac_client ac_server
+	-$(RM) $(CLIENT_PCH) $(CLIENT_OBJS) $(SERVER_OBJS) $(MASTER_OBJS) ac_client ac_server ac_master
 #	-$(MAKE) -C ../enet/ clean
 
 %.h.gch: %.h
